bijgwerkt tot einde

--- a/index.html
+++ b/index.html
@@ -2,41 +2,60 @@
 <html>
 <head>
 	<title>Roerbak bolognese met kip en spinazie</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 </head>
 
 <body>
-<h4>Ingrediënten</h4>
+
+<div id="container">
+
+<div id="title">
+	<h1>Roerbak bolognese met kip en spinazie</h1>
+</div>
+
+<div id="ingredienten">
+<h3>Ingrediënten</h3>
 <ul>
 
-<li>1 zakje <i>MAGGI Roerbakpasta Bolognese</i></li>
-<li>450 gram diepvriesspinazie</li>
-<li>3 stuks tomaat (in blokjes gesneden)</li>
-<li>300 gram kipfilet</li>
-<li>2 eetlepels olijfolie</li>
-<li>2 takjes peterselie (fijn gehakt - eventueel)</li>
+	<li>1 zakje <u><i>MAGGI Roerbakpasta Bolognese</i></u></li>
+	<li>450 gram diepvriesspinazie</li>
+	<li>3 stuks tomaat (in blokjes gesneden)</li>
+	<li>300 gram kipfilet</li>
+	<li>2 eetlepels olijfolie</li>
+	<li>2 takjes peterselie (fijn gehakt - eventueel)</li>
 
 </ul>
+</div>
 
+<div id="foto1">
+<img src="jpg/polaroid foto.png" id="roerbak">
+</div>
+
+<div id="stappen">
 <h4>Bereidingswijze</h4>
 <ol>
-<p><li><b>Bak de kip</b>
+	<li><b>Bak de kip</b>
 <br>
 Verhit de olijfolie in een hapjespan en roerbak hierin de kip op hoog vuur in ca. 2 minuten aan.
-</br></li></p>
+</br></li>
 
-<p><li><b>Voeg de spinazie toe</b>
+	<li><b>Voeg de spinazie toe</b>
 <br>
 Voeg de blokjes spinazie toe en roer goed door. Laat in enkele minuten de spinazie ontdooien.
-</br></li></p>
+</br></li>
 
-<p><li><b>Bereid de mix en pasta</b>
+	<li><b>Bereid de mix en pasta</b>
 <br>Voeg het water toe met de mix en de pasta. Roer het geheel door elkaar en breng aan de kook. Zet de hittebron lager zodra het geheel kookt, voeg de blokjes tomaat toe en laat het geheel 11 a 12 minuten pruttelen tot de pasta al dente/gaar is. Schep tussendoor af en toe om.
-</br></li></p>
+</br></li>
 
-<p><li><b>Serveer het gerecht</b>
+	<li><b>Serveer het gerecht</b>
 <br>Schep het gerecht op de borden en eet smakelijk.
-</br></li></p>
+</br></li>
+
+</ol>
+</div>
+</div>
 
 </body>
 </html>
